--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -20,4 +20,9 @@ jobs:
 
       - name: Install all dependencies
         run: pip install -r requirements.txt
+
+      - name: test with pytest
+        run: |
+          pip instal pytest
+          putest
        
